fixed website header for visibility

--- a/public/css/creative.css
+++ b/public/css/creative.css
@@ -144,7 +144,7 @@ header {
     background-position: center;
     background-image: url(../img/headernew.png);
     background-repeat: no-repeat;
-    box-shadow:inset 0 0 0 2000px rgba(255, 255, 255, 0.4);
+    box-shadow:inset 0 0 0 2000px rgba(255, 255, 255, 0.5);
     min-height: 100%;
     z-index: 199;
 }
